[package]
edition = "2018"
name = "duktape_ffi_raw"
version = "2.40.0"
authors = ["Alastair Coote <rusting@alastair.is>"]
links = "duktape"
description = "A simple wrapper around the Duktape C library."
readme = "readme.md"
license = "MIT"

[build-dependencies]
bindgen = "0.51.0"

[build-dependencies.cc]
version = "1.0"
